applications/podinfo/staging/podinfo/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: podinfo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-podinfo
      protocol: HTTP
    hosts:
    - podinfo.staging.nowca.st
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-podinfo
      protocol: HTTPS
    hosts:
    - podinfo.staging.nowca.st
    tls:
      credentialName: st-nowca-staging-tls
      mode: SIMPLE
