applications/podinfo/staging/podinfo/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: podinfo
  namespace: podinfo
spec:
  hosts:
    - 'podinfo.staging.nowca.st'
    - 'podinfo2.staging.nowca.st'
  gateways:
    - 'istio-system/st-nowca-wildcard'
  http:
    - route:
        - destination:
            host: podinfo.podinfo.svc.cluster.local
            port:
              number: 9898
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: podinfo
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  jwtRules:
    - issuer: https://accounts.google.com
      jwksUri: https://www.googleapis.com/oauth2/v3/certs
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: podinfo
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
